--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,9 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+
+#firebase config
+.firebaserc
+firebase/config.js
+proposal
+.firebase/
